src/resources/styles/index.css
body {
	overflow: hidden;
	background-color: #1e1e1e;
	background-image: url('/resources/images/icons/loading.webp');
	background-repeat: no-repeat;
	background-attachment: fixed;
	background-position: center;
	background-size: 15vh;
}

iframe {
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	border: none;
}

.console {
	display: none;
	flex: 1;
	flex-direction: column;
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	overflow: scroll;
	z-index: 100;
	background-color: whitesmoke;
	text-wrap: nowrap;
	scrollbar-width: thin;
}

.console span {
	margin: 5px 10px;
	font-family: 'Courier New', Courier, monospace;
	font-size: 16px;
}

.console span:first-child {
	margin-top: 10px;
}

.console span:last-child {
	margin-bottom: 10px;
}

.console .debug {
	color: darkgray;
}
.console .log {
	color: black;
}
.console .info {
	color: blue;
}
.console .warn {
	color: orange;
}
.console .error {
	color: red;
}

@media (prefers-color-scheme: dark) {
	.console {
		background-color: #1e1e1e;
	}
	.console .debug {
		color: dimgray;
	}
	.console .log {
		color: white;
	}
}

